<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <parent>
        <artifactId>mypet-parent</artifactId>
        <groupId>de.keyle</groupId>
        <version>1</version>
        <relativePath>../../pom.xml</relativePath>
    </parent>
    <modelVersion>4.0.0</modelVersion>

    <artifactId>mypet-compat-v1_18_R2</artifactId>
    <version>1</version>
    <packaging>jar</packaging>
    <name>MyPet-v1_18_R2</name>

    <dependencies>
        <dependency>
            <groupId>org.spigotmc</groupId>
            <artifactId>spigot</artifactId>
            <version>1.18.2-R0.1-SNAPSHOT</version>
            <classifier>remapped-mojang</classifier>
            <scope>provided</scope>
            <optional>true</optional>
        </dependency>
        
        <dependency>
           <groupId>org.spigotmc</groupId>
           <artifactId>spigot-api</artifactId>
           <version>1.18.2-R0.1-SNAPSHOT</version>
           <scope>provided</scope>
   		</dependency>
        <dependency>
            <groupId>com.mojang</groupId>
            <artifactId>brigadier</artifactId>
            <version>1.0.18</version>
        </dependency>
        <dependency>
            <groupId>com.mojang</groupId>
            <artifactId>datafixerupper</artifactId>
            <version>4.0.26</version>
        </dependency>
        <dependency>
            <groupId>com.mojang</groupId>
            <artifactId>javabridge</artifactId>
            <version>1.2.24</version>
        </dependency>
        <dependency>
            <groupId>com.mojang</groupId>
            <artifactId>authlib</artifactId>
            <version>3.2.38</version>
        </dependency>
        
        <dependency>
            <groupId>de.keyle</groupId>
            <artifactId>mypet-api</artifactId>
            <version>1</version>
        </dependency>
        <dependency>
            <groupId>de.keyle</groupId>
            <artifactId>mypet-skills</artifactId>
            <version>1</version>
            <exclusions>
                <exclusion>
                    <groupId>org.bukkit</groupId>
                    <artifactId>craftbukkit</artifactId>
                </exclusion>
            </exclusions>
        </dependency>
    </dependencies>

    <build>
        <finalName>${project.name}</finalName>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-jar-plugin</artifactId>
                <version>2.6</version>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.8.1</version>
                <configuration>
                    <source>17</source>
                    <target>17</target>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-deploy-plugin</artifactId>
                <version>2.8.2</version>
                <configuration>
                    <skip>true</skip>
                </configuration>
            </plugin>
            <plugin>
              <groupId>net.md-5</groupId>
              <artifactId>specialsource-maven-plugin</artifactId>
              <version>1.2.2</version>
              <executions>
                  <execution>
                      <phase>package</phase>
                      <goals>
                          <goal>remap</goal>
                      </goals>
                      <id>remap-obf</id>
                      <configuration>
                          <srgIn>org.spigotmc:minecraft-server:1.18.2-R0.1-SNAPSHOT:txt:maps-mojang</srgIn>
                          <reverse>true</reverse>
                          <remappedDependencies>org.spigotmc:spigot:1.18.2-R0.1-SNAPSHOT:jar:remapped-mojang</remappedDependencies>
                          <remappedArtifactAttached>true</remappedArtifactAttached>
                          <remappedClassifierName>remapped-obf</remappedClassifierName>
                      </configuration>
                  </execution>
                  <execution>
                      <phase>package</phase>
                      <goals>
                          <goal>remap</goal>
                      </goals>
                      <id>remap-spigot</id>
                      <configuration>
                          <inputFile>${project.build.directory}/${project.artifactId}-${project.version}-remapped-obf.jar</inputFile>
                          <srgIn>org.spigotmc:minecraft-server:1.18.2-R0.1-SNAPSHOT:csrg:maps-spigot</srgIn>
                          <remappedDependencies>org.spigotmc:spigot:1.18.2-R0.1-SNAPSHOT:jar:remapped-obf</remappedDependencies>
                      </configuration>
                  </execution>
              </executions>
          </plugin>
        </plugins>
    </build>

</project>
